Add a feature that check/change settings by TEXT in advanced setting.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -12,7 +12,7 @@
         "message": "MultiLookup"
     },
     "ext_description": {
-        "message": "This extension lets you select text to search from multiple sources (categorized as dictionary, translation, or search) and displays the results in a single pop-up screen."
+        "message": "This extension lets you select text to search from multiple sources and displays the results in a single pop-up screen."
     },
     "contributor": {
         "message": "Contributors"
